samples/bad/bad028.lat
// Variable declaration as an only if instruction

int main () {
 if(true)
    int x;
 return 0 ;
}